<resources>
    <string name="app_name">PruebaIntent</string>
    <string name="ir_2">IR 2</string>
    <string name="resultado1">RESULTADO1</string>
    <string name="buscar_en_google">BUSCAR EN GOOGLE</string>
    <string name="llamar">LLAMAR</string>
    <string name="abrir_camara">ABRIR CAMARA</string>
    <string name="SUMA">SUMA</string>
    <string name="volver">VOLVER</string>
    <string name="numero_2">Numero 2</string>
    <string name="numero_1">Numero 1</string>
    <string name="mas">+</string>
</resources>